core added