@@ -7,7 +7,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.http.converter.HttpMessageNotReadableException;
-import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.MissingRequestHeaderException;
 import org.springframework.web.bind.MissingServletRequestParameterException;
@@ -21,13 +20,19 @@ import java.time.LocalDateTime;
 @ControllerAdvice
 public class GlobalExceptionHandler {
 
-    @ExceptionHandler(ConstraintViolationException.class)
+    // SPRING EXCEPTIONS -----------------------------------------------
+
+    @ExceptionHandler(
+            ConstraintViolationException.class              // Custom annotation exceptions
+    )
     public ResponseEntity<ApiError> handleConstraintViolation(ConstraintViolationException e, HttpServletRequest request) {
         String errorMessage = e.getConstraintViolations().stream()
                 .map(ConstraintViolation::getMessage)
                 .findFirst()
                 .orElse("Invalid input");
+
         log.debug("VALIDATION FAILED: {}", e.getMessage());
+
         ApiError apiError = ApiError.builder()
                 .status(HttpStatus.BAD_REQUEST)
                 .reason("Validation Failed")
@@ -37,29 +42,27 @@ public class GlobalExceptionHandler {
         return new ResponseEntity<>(apiError, HttpStatus.BAD_REQUEST);
     }
 
-    @ExceptionHandler(MethodArgumentNotValidException.class)
+    @ExceptionHandler(
+            MethodArgumentNotValidException.class            // @Valid annotation exceptions
+    )
     public ResponseEntity<ApiError> handleMethodArgumentNotValidException(MethodArgumentNotValidException e, HttpServletRequest request) {
-        BindingResult bindingResult = e.getBindingResult();
-        if (bindingResult.hasErrors()) {
-            String errorMessage = bindingResult.getAllErrors().get(0).getDefaultMessage();
-            Object target = bindingResult.getTarget();
-            log.debug("VALIDATION FAILED: {} for {}", errorMessage, target);
-            ApiError apiError = ApiError.builder()
-                    .status(HttpStatus.BAD_REQUEST)
-                    .reason("Validation Failed")
-                    .message(errorMessage)
-                    .timestamp(LocalDateTime.now())
-                    .build();
-            return new ResponseEntity<>(apiError, HttpStatus.BAD_REQUEST);
-        }
-        return new ResponseEntity<>(HttpStatus.OK);
+        String errorMessage = e.getBindingResult().getAllErrors().getFirst().getDefaultMessage();
+        Object target = e.getBindingResult().getTarget();
+        log.debug("VALIDATION FAILED: {} for {}", errorMessage, target);
+        ApiError apiError = ApiError.builder()
+                .status(HttpStatus.BAD_REQUEST)
+                .reason("Validation Failed")
+                .message(errorMessage)
+                .timestamp(LocalDateTime.now())
+                .build();
+        return new ResponseEntity<>(apiError, HttpStatus.BAD_REQUEST);
     }
 
     @ExceptionHandler({
-            IllegalArgumentException.class,
-            MethodArgumentTypeMismatchException.class,
-            HttpMessageNotReadableException.class,
-            MissingServletRequestParameterException.class
+            IllegalArgumentException.class,                        // wrong arguments like -1
+            MethodArgumentTypeMismatchException.class,             // argument type mismatch
+            HttpMessageNotReadableException.class,                 // wrong json in request body
+            MissingServletRequestParameterException.class          // missing RequestParam
     })
     public ResponseEntity<ApiError> handleIllegalArgument(Throwable e, HttpServletRequest request) {
         log.debug("ILLEGAL ARGUMENT: {}", e.getMessage());
@@ -72,7 +75,9 @@ public class GlobalExceptionHandler {
         return new ResponseEntity<>(apiError, HttpStatus.BAD_REQUEST);
     }
 
-    @ExceptionHandler(MissingRequestHeaderException.class)
+    @ExceptionHandler(
+            MissingRequestHeaderException.class                        // missing request header
+    )
     public ResponseEntity<ApiError> handleMissingRequestHeaderException(MissingRequestHeaderException e, HttpServletRequest request) {
         log.debug("MISSING HEADER: {}", e.getMessage());
         ApiError apiError = ApiError.builder()
@@ -84,7 +89,11 @@ public class GlobalExceptionHandler {
         return new ResponseEntity<>(apiError, HttpStatus.BAD_REQUEST);
     }
 
-    @ExceptionHandler(BadRequestException.class)
+    // CUSTOM EXCEPTIONS --------------------------------------------------------
+
+    @ExceptionHandler(
+            BadRequestException.class                        // custom bad request
+    )
     public ResponseEntity<ApiError> handleBadRequestException(BadRequestException e, HttpServletRequest request) {
         log.debug("BAD REQUEST: {}", e.getMessage());
         ApiError apiError = ApiError.builder()
@@ -96,7 +105,9 @@ public class GlobalExceptionHandler {
         return new ResponseEntity<>(apiError, HttpStatus.BAD_REQUEST);
     }
 
-    @ExceptionHandler(ConflictException.class)
+    @ExceptionHandler(
+            ConflictException.class                        // custom conflict exception
+    )
     public ResponseEntity<ApiError> handleConflictException(ConflictException e, HttpServletRequest request) {
         log.debug("CONFLICT: {}", e.getMessage());
         ApiError apiError = ApiError.builder()
@@ -108,7 +119,9 @@ public class GlobalExceptionHandler {
         return new ResponseEntity<>(apiError, HttpStatus.CONFLICT);
     }
 
-    @ExceptionHandler(ForbiddenException.class)
+    @ExceptionHandler(
+            ForbiddenException.class                        // custom forbidden exception
+    )
     public ResponseEntity<ApiError> handleForbiddenException(ForbiddenException e, HttpServletRequest request) {
         log.debug("FORBIDDEN: {}", e.getMessage());
         ApiError apiError = ApiError.builder()
@@ -120,7 +133,9 @@ public class GlobalExceptionHandler {
         return new ResponseEntity<>(apiError, HttpStatus.FORBIDDEN);
     }
 
-    @ExceptionHandler(NotFoundException.class)
+    @ExceptionHandler(
+            NotFoundException.class                        // custom not_found exception
+    )
     public ResponseEntity<ApiError> handleNotFoundException(NotFoundException e, HttpServletRequest request) {
         log.debug("NOT FOUND: {}", e.getMessage());
         ApiError apiError = ApiError.builder()
@@ -132,7 +147,11 @@ public class GlobalExceptionHandler {
         return new ResponseEntity<>(apiError, HttpStatus.NOT_FOUND);
     }
 
-    @ExceptionHandler(RuntimeException.class)
+    // OTHER UNKNOWN EXCEPTIONS ---------------------------------------------------
+
+    @ExceptionHandler(
+            RuntimeException.class                        // Internal Server Error
+    )
     public ResponseEntity<ApiError> handleRuntimeException(RuntimeException e, HttpServletRequest request) {
         log.debug("INTERNAL SERVER ERROR: {}", e.getMessage());
         ApiError apiError = ApiError.builder()
@@ -143,4 +162,6 @@ public class GlobalExceptionHandler {
                 .build();
         return new ResponseEntity<>(apiError, HttpStatus.INTERNAL_SERVER_ERROR);
     }
+
+
 }
